--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 @font-face {
     font-family: voyage;
-    src: url("./Assets/Fonts/Voyage.ttf");
+    src: url("./Assets/Fonts/voyage\ thin.otf");
 }
 * {
     margin: 0;
